--- a/mobiweb/index.html
+++ b/mobiweb/index.html
@@ -38,7 +38,7 @@
     const serviceWorkerVersion = "624843436";
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="./flutter.js" defer></script>
+  <script src="flutter.js" defer></script>
 </head>
 
 <body>
